used ordering in export service